# dns-server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml  rust.yaml
src/: handler.rs  main.rs  options.rs
